# bres

./: README.md  package.xml  setup.cfg  setup.py
bres/: InterfaceMotor.py  MainNode.py  teste copy 2.py  teste copy.py  teste.py
launch/: minos.launch.py
meshes/: 3d_base.stl
urdf/: bres.urdf.xacro
