<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bres</name>
  <version>0.0.0</version>
  <description>Trabalho de conclusão de curso em engenharia mecatrônica pelo IFSC. Modelagem e construção de um braço robótico educacional SCARA</description>
  <maintainer email="breno.ara.cabral@gmail.com">minos</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <exec_depend>urdf_launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
